# dify-helm-ee-release-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dockerhub-release-hitl.yml  dockerhub-release.yml
config/: repos.yaml
docs/: configuration.md
docs/repos/: dify-enterpise.md  dify-enterprise-frontend.md  dify-helm.md  dify.md
scripts/: docker-build.sh  docker-push.sh
src/helm_release_mcp/: __init__.py  __main__.py  server.py  settings.py
src/helm_release_mcp/api/: __init__.py  tool_calls.py
src/helm_release_mcp/core/: __init__.py  files.py  git.py  github.py  tool_calls.py  workspace.py
src/helm_release_mcp/redis/: client.py
src/helm_release_mcp/repos/: __init__.py  base.py  registry.py
src/helm_release_mcp/repos/types/: __init__.py
src/helm_release_mcp/repos/types/dify/: __init__.py  branch.py  repo.py
src/helm_release_mcp/repos/types/dify_enterprise/: __init__.py  build.py  release.py  repo.py  tag.py  version.py
src/helm_release_mcp/repos/types/dify_enterprise_frontend/: __init__.py  repo.py  tag.py
src/helm_release_mcp/repos/types/dify_helm/: __init__.py  charts.py  release.py  repo.py  workflows.py
src/helm_release_mcp/tools/: __init__.py  global_tools.py  pr_commit_handler.py  repo_tools.py
static/: app.js  auth.js  index.html  login.html  login.js  style.css
